# bazel-practice

./: .bazelrc  .tool-versions  WORKSPACE
configs/: BUILD.bazel  sample.libsonnet
configs2/: BUILD.bazel  main.jsonnet  main_test.json
src/main/java/com/github/rayyyy/libs/: BUILD.bazel  MyBin.java  MyLib.java
src/test/java/com/github/rayyyy/libs/: BUILD.bazel  MyLibTest.java
