load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")
package(default_visibility = ["//visibility:public"])

jsonnet_library(
    name = "sample",
    srcs = ["sample.libsonnet"],
)

jsonnet_to_json_test(
    name = "sample_test",
    src = "sample.libsonnet",
    deps = [":sample"],
    golden = "sample_test.json",
)