load("@rules_java//java:defs.bzl", "java_binary", "java_library")
package(default_visibility = ["//src/test/java/com/github/rayyyy/libs:__subpackages__"])
java_library(
    name = "mylib",
    srcs = ["MyLib.java"],
)

java_binary(
    name = "mybin",
    srcs = ["MyBin.java"],
    main_class = "main.java.com.github.rayyyy.libs.MyBin",
    deps = [
        ":mylib",
    ],
)